Complete feature implementation and task management system
- Added comprehensive task management system with TODO.md
- Implemented new pages: AI Lab, Tasks, Profile, Workspaces, etc.
- Added new components: ThemeProvider, Notifications, Activities
- Enhanced existing components with better functionality
- Added new stores: authStore, cartStore, realtimeStore
- Implemented comprehensive improvement plan
- Added database schema for tasks
- Enhanced UI with new components and features
- Added admin and settings pages
- Improved overall project structure and organization

--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KSFoundation - Premium Web Hosting | Fast, Secure & Reliable</title>
-    <meta name="description" content="Launch your website at rocket speed with KSFoundation. Premium web hosting with 99.9% uptime, free SSL, CDN, and 24/7 support. Starting at $1.99/month." />
-    <meta name="author" content="KSFoundation" />
-    <meta name="keywords" content="web hosting, cloud hosting, VPS, domain registration, WordPress hosting, SSL certificate, website builder" />
+    <title>KSR Foundation - Premium Web Hosting & Cloud Services</title>
+    <meta name="description" content="KSR Foundation offers premium web hosting, VPS, cloud hosting, and domain services. Experience blazing-fast performance with 24/7 support." />
+    <meta name="author" content="KSR Foundation" />
+    <meta name="keywords" content="web hosting, VPS hosting, cloud hosting, domain registration, WordPress hosting, KSR Foundation" />
+    <meta name="theme-color" content="#ff6b35" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="KSR Foundation" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <meta property="og:title" content="KSFoundation - Premium Web Hosting" />
-    <meta property="og:description" content="Launch your website at rocket speed with 99.9% uptime guarantee. Premium hosting starting at $1.99/month." />
+    <meta property="og:title" content="KSR Foundation - Premium Web Hosting & Cloud Services" />
+    <meta property="og:description" content="KSR Foundation offers premium web hosting, VPS, cloud hosting, and domain services. Experience blazing-fast performance with 24/7 support." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://ksfoundation.com/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@KSFoundation" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@KSRFoundation" />
+    <meta name="twitter:image" content="https://ksfoundation.com/og-image.png" />
     
     <link rel="canonical" href="https://ksfoundation.com" />
   </head>
