--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KSR Foundation - Premium Web Hosting & Cloud Services</title>
-    <meta name="description" content="KSR Foundation offers premium web hosting, VPS, cloud hosting, and domain services. Experience blazing-fast performance with 24/7 support." />
-    <meta name="author" content="KSR Foundation" />
-    <meta name="keywords" content="web hosting, VPS hosting, cloud hosting, domain registration, WordPress hosting, KSR Foundation" />
-    <meta name="theme-color" content="#ff6b35" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="KSR Foundation" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <meta property="og:title" content="KSR Foundation - Premium Web Hosting & Cloud Services" />
-    <meta property="og:description" content="KSR Foundation offers premium web hosting, VPS, cloud hosting, and domain services. Experience blazing-fast performance with 24/7 support." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://ksfoundation.com/og-image.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>KSR Foundation - Premium Web Hosting & Cloud Services</title>
+  <meta name="description"
+    content="KSR Foundation offers premium web hosting, VPS, cloud hosting, and domain services. Experience blazing-fast performance with 24/7 support." />
+  <meta name="author" content="KSR Foundation" />
+  <meta name="keywords"
+    content="web hosting, VPS hosting, cloud hosting, domain registration, WordPress hosting, KSR Foundation" />
+  <meta name="theme-color" content="#ff6b35" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="icon" type="image/png" href="/logo192.png" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="KSR Foundation" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@KSRFoundation" />
-    <meta name="twitter:image" content="https://ksfoundation.com/og-image.png" />
-    
-    <link rel="canonical" href="https://ksfoundation.com" />
-  </head>
+  <meta property="og:title" content="KSR Foundation - Premium Web Hosting & Cloud Services" />
+  <meta property="og:description"
+    content="KSR Foundation offers premium web hosting, VPS, cloud hosting, and domain services. Experience blazing-fast performance with 24/7 support." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://ksfoundation.com/og-image.png" />
 
-  <body class="dark">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@KSRFoundation" />
+  <meta name="twitter:image" content="https://ksfoundation.com/og-image.png" />
+
+  <link rel="canonical" href="https://ksfoundation.com" />
+</head>
+
+<body class="dark">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
